bug fixes for displaying and overflowerror

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,20 +21,35 @@ a{
   text-decoration: none;
 }
 
+textarea{
+  resize: none;
+}
+
 .headerbar{
   position:relative;
   overflow:hidden;
+  margin-bottom: .25rem;
 }
 
 /* hero image */
-.headerimage{
-  width:100%;
-  height:100%;
+.headerimage {
+  width: 100%;
+  height: auto;
   position: relative;
-  overflow:hidden;
-  float:left;
+  overflow: hidden;
 }
 
+.headerimage img {
+  width: auto;
+  height: auto;
+  display: block;
+  margin-bottom: .25rem;
+}
+
+.headerimage img:hover {
+  box-shadow: 0 8px 16px 0 rgba(145,23,12, 0.15), 
+              0 6px 20px 0 rgba(31, 31, 31, 0.3);
+}
 
 /* navbar styling starts here */
 /* Main navbar styling */
@@ -94,7 +109,6 @@ a{
 
 /* Media queries for responsive design */
 @media (max-width: 768px) {
-  /* Hide desktop navigation and show mobile menu icon */
   .navbaritems {
       display: none;
   }
@@ -178,7 +192,7 @@ a{
 /* grid container for infromation  */
 .grid-info-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr)); /*changfes by screen size */
+  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
   gap: auto;
   padding: 20px;
   row-gap: 20px;
@@ -221,7 +235,7 @@ a{
   border-radius: 4px;
 }
 
-/* styling pages where there is only one item in grid */
+/* styling pages for single item */
 .grid-single-item{
   background-color: #f2f2f2;
   padding: 20px;
@@ -229,8 +243,7 @@ a{
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   text-align: center;
-  transition: box-shadow 0.3s ease;
-  max-width: 50%;
+  max-width: 100%;
   word-wrap:break-word;
 }
 
@@ -272,6 +285,7 @@ a{
   min-height: 300px; 
 }
 
+
 /* flexbox for account registering and login */
 .account-container {
   display: flex;
@@ -284,15 +298,15 @@ a{
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 400px; /* Limit form width */
-  gap: 20px; /* Add space between input fields and button */
+  max-width: 400px;
+  gap: 20px;
 }
 
 .account-form input[type="text"],
 .account-form input[type="password"],
 .account-btn {
   width: 100%;
-  box-sizing: border-box; /* Ensure padding doesn't affect width */
+  box-sizing: border-box;
 }
 
 .account-btn {
@@ -346,4 +360,3 @@ footer a{
   text-decoration: underline;
   color:inherit
 }
-
